+fix header alignment

--- a/style.css
+++ b/style.css
@@ -448,6 +448,7 @@ footer ul {
   .tiles-grid h2 {
     grid-column: 1 / 3;
     grid-row: 1 /1;
+    justify-self: flex-start;
   }
 
   .tiles-grid .see-all-container {
@@ -491,6 +492,7 @@ footer ul {
 
     .tiles-grid h2 {
       grid-column: 1 / 4;
+      justify-self: flex-start;
     }
 
     .tiles-grid .see-all-container {
